syntax = "proto3";
import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions
{
  optional int32 MsgID = 50000;
}
